fixing icon hover on IE9

--- a/_assets/stylesheets/base.scss
+++ b/_assets/stylesheets/base.scss
@@ -330,7 +330,7 @@ a {
     top: 0 !important;
   }
 
-  .spacer {
+  .square.spacer {
     margin-bottom: 1.5em !important;
   }
 }
